# Financial-Analysis

./: .gitignore  csv_loader.py  pyproject.toml  schema.sql  tagging.py
src/: csv_loader.py  sql.py
