[tool.poetry]
name = "financial-analysis"
version = "0.1.0"
description = ""
authors = ["Izzy Lancaster <avrisaac555@gmail.com>"]
readme = "README.md"
packages = [{include = "financial_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
